[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heterogt"               
version = "0.1.0"
description = "heterogeneous graph transformer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [      
  "numpy",
  "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["heterogt*"]    